// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiHeaderSectionItemButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="ouiButtonEmpty ouiButtonEmpty--text ouiHeaderSectionItemButton testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    >
      <span
        class="ouiHeaderSectionItemButton__content"
      />
    </span>
  </span>
</button>
`;

exports[`OuiHeaderSectionItemButton renders a link 1`] = `
<a
  class="ouiButtonEmpty ouiButtonEmpty--text ouiHeaderSectionItemButton"
  href="#"
  rel="noreferrer"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    >
      <span
        class="ouiHeaderSectionItemButton__content"
      />
    </span>
  </span>
</a>
`;

exports[`OuiHeaderSectionItemButton renders children 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--text ouiHeaderSectionItemButton"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    >
      <span
        class="ouiHeaderSectionItemButton__content"
      >
        <span>
          Ahoy!
        </span>
      </span>
    </span>
  </span>
</button>
`;

exports[`OuiHeaderSectionItemButton renders notification as a badge 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--text ouiHeaderSectionItemButton"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    >
      <span
        class="ouiHeaderSectionItemButton__content"
      />
      <span
        class="ouiNotificationBadge ouiHeaderSectionItemButton__notification ouiHeaderSectionItemButton__notification--badge"
      >
        1
      </span>
    </span>
  </span>
</button>
`;

exports[`OuiHeaderSectionItemButton renders notification as a dot 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--text ouiHeaderSectionItemButton"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    >
      <span
        class="ouiHeaderSectionItemButton__content"
      />
      <span
        class="ouiHeaderSectionItemButton__notification ouiHeaderSectionItemButton__notification--dot"
        color="accent"
        data-ouiicon-type="dot"
      />
    </span>
  </span>
</button>
`;

exports[`OuiHeaderSectionItemButton renders notification color 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--text ouiHeaderSectionItemButton"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    >
      <span
        class="ouiHeaderSectionItemButton__content"
      />
      <span
        class="ouiNotificationBadge ouiNotificationBadge--subdued ouiHeaderSectionItemButton__notification ouiHeaderSectionItemButton__notification--badge"
      >
        1
      </span>
    </span>
  </span>
</button>
`;
